fix text cropping in list view title text while in desktop mode

--- a/develop/app_nr/sass/modules/_content.scss
+++ b/develop/app_nr/sass/modules/_content.scss
@@ -305,7 +305,6 @@ ul.card {
             }
             .list-author {
                 width: 31.5%;
-                line-height: 1.3;
                 color: #6f6f6f;
             }
 
@@ -313,7 +312,7 @@ ul.card {
                 width: 60%;
                 color: $reader-blue;
                 @include athelas($size: 1.8rem, $style: italic, $weight: 400);
-                @include ellipsis();
+                //@include ellipsis();
             }
         }
 
@@ -446,6 +445,19 @@ ul.card {
     .content {
         width: 100%;
         margin-left: 0;
+    }
+
+
+    li.list-format {
+        a {
+
+            .list-author {
+                line-height: 1.3;
+            }
+            .list-title {
+                @include ellipsis();
+            }
+        }
     }
 }
 
